--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=  com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/test?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.open-in-view=false
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
+logging.level.root=DEBUG
+logging.level.com.example.myapp=DEBUG
