--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test?verifyServerCertificate=f
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.open-in-view=false
